--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "vite --open --mode ssr",
     "qwik": "qwik",
     "pages:dev": "wrangler pages dev --compatibility-date=2024-01-17 -- npm run dev",
-    "pages:deploy": "npm run build && wrangler pages deploy ./dist"
+    "pages:deploy": "sudo npm run build && wrangler pages deploy ./dist"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.3.5",
