--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
+    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "wrangler pages publish ./dist",
+    "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
+    "pages:deploy": "sudo npm run build && wrangler pages deploy ./dist",
+    "pages:dev": "wrangler pages dev --compatibility-date=2024-01-17 -- npm run dev",
     "preview": "qwik build preview && vite preview --open",
     "serve": "wrangler pages dev ./dist",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "pages:dev": "wrangler pages dev --compatibility-date=2024-01-17 -- npm run dev",
-    "pages:deploy": "sudo npm run build && wrangler pages deploy ./dist"
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.3.5",
@@ -40,8 +40,12 @@
     "prettier": "^3.1.1",
     "typescript": "5.3.3",
     "undici": "*",
+    "vercel": "^29.1.1",
     "vite": "^5.0.11",
     "vite-tsconfig-paths": "^4.2.1",
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "sharp": "^0.33.2"
   }
 }
